feat: new app bundling
Signed-off-by: Morten Svanaes <msvanaes@dhis2.org>